--- a/voice/whisperWeb/ui/index.html
+++ b/voice/whisperWeb/ui/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WhisperWeb: The Power of WhisperLive, LLM's, and WhisperSpeech</title>
+  <title>WhisperWeb: Robot assistant</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/all.min.css"/>
 </head>
@@ -11,7 +11,7 @@
   <div style="background-color: white;width:100vw;margin-top:0;">
   <div style="max-width: 500px; margin: 0 auto !important; float: none !important;padding-top:20px;padding-bottom:30px;font-family: 'Poppins', sans-serif;font-weight: 400;">
     <br>
-    <h3>WhisperWeb: The Power of WhisperLive, LLM's, and WhisperSpeech</h3>
+    <h3>Hi, I am your robot assistant, ask me anything you want</h3>
     <br>
   </div>
 </div>
